[project]
name = "allye-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cvxpy>=1.7.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
